<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_complete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAlignment="textEnd"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_prev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_prev"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_complete" />

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strPercent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_7"
        app:layout_constraintEnd_toStartOf="@+id/btn_ce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_prev" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strSeven"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_percent" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strFour"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strOne"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strZero"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_result"
        app:layout_constraintEnd_toStartOf="@+id/btn_comma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strTwo"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_comma"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strThree"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign"
        app:layout_constraintEnd_toStartOf="@+id/btn_minus"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_comma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strComma"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_result"
        app:layout_constraintEnd_toStartOf="@+id/btn_sign"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintTop_toBottomOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strSign"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_result"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus"
        app:layout_constraintStart_toEndOf="@+id/btn_comma"
        app:layout_constraintTop_toBottomOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strPlus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_sign"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strMinus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_3"
        app:layout_constraintTop_toBottomOf="@+id/btn_mult" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strFive"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_6"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strSix"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_3"
        app:layout_constraintEnd_toStartOf="@+id/btn_mult"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintTop_toBottomOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_mult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strMult"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_6"
        app:layout_constraintTop_toBottomOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strEight"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_9"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_ce" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strNine"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_6"
        app:layout_constraintEnd_toStartOf="@+id/btn_div"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintTop_toBottomOf="@+id/btn_c" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:text="@string/strDiv"
        app:layout_constraintBottom_toTopOf="@+id/btn_mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_9"
        app:layout_constraintTop_toBottomOf="@+id/btn_del"
        />

    <Button
        android:id="@+id/btn_ce"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strCE"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_8"
        app:layout_constraintEnd_toStartOf="@+id/btn_c"
        app:layout_constraintStart_toEndOf="@+id/btn_percent"
        app:layout_constraintTop_toBottomOf="@+id/txt_prev" />

    <Button
        android:id="@+id/btn_del"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strDel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_c"
        app:layout_constraintTop_toBottomOf="@+id/txt_prev" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/strC"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_9"
        app:layout_constraintEnd_toStartOf="@+id/btn_del"
        app:layout_constraintStart_toEndOf="@+id/btn_ce"
        app:layout_constraintTop_toBottomOf="@+id/txt_prev" />

    <Button
        android:id="@+id/btn_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"


        android:text="@string/strEqual"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_comma" />

</androidx.constraintlayout.widget.ConstraintLayout>